# catalyst-engine

./: Cargo.toml  LICENSE  README.md
assets/: scene1.glb  scene2.glb  scene3.glb  scene4.glb  scene5.glb  simple10.glb  simple11.glb  simple12.glb  simple13.glb  simple14.glb  simple15.glb  simple2.glb  simple3.glb  simple4.glb  simple5.glb  simple6.glb  simple7.glb  simple8.glb  simple9.glb
crates/catalyst_app/: Cargo.toml
crates/catalyst_app/src/: main.rs
crates/catalyst_assets/: Cargo.toml
crates/catalyst_assets/src/: asset_events.rs  asset_server.rs  assets.rs  components.rs  lib.rs  material.rs  physics.rs  scene.rs
crates/catalyst_assets/src/asset_server/: exr_parser.rs  gltf_parser.rs
crates/catalyst_core/: Cargo.toml
crates/catalyst_core/src/: assets.rs  camera.rs  input.rs  lib.rs  physics.rs  pipeline.rs  time.rs  transform.rs
crates/catalyst_debug/: Cargo.toml
crates/catalyst_debug/src/: egui_state.rs  greed.rs  lib.rs  physics.rs
crates/catalyst_input/: Cargo.toml  README.md
crates/catalyst_input/src/: context.rs  lib.rs  logical.rs  physical.rs
crates/catalyst_physics/: Cargo.toml
crates/catalyst_physics/src/: lib.rs  prepare.rs  step.rs  sync.rs
crates/catalyst_renderer/: Cargo.toml
crates/catalyst_renderer/src/: camera.rs  global_resources.rs  global_uniform.rs  lib.rs  light.rs  material.rs  mesh.rs  programs.rs  render.rs  shader.wgsl  texture.rs
crates/catalyst_renderer/src/programs/: debug_lines_program.rs  lines.wgsl  pbr_program.rs
crates/catalyst_scene/: Cargo.toml
crates/catalyst_scene/src/: lib.rs
crates/catalyst_window/: Cargo.toml
crates/catalyst_window/src/: lib.rs
scripts/: init.flecs
tools/: game_engine_physics.py
