# Filename: Cargo.toml
[workspace]
resolver = "2"
members = [
    "crates/catalyst_core",
    "crates/catalyst_app",
    "crates/catalyst_window", 
    "crates/catalyst_assets",
    "crates/catalyst_scene",
    "crates/catalyst_renderer", 
    "crates/catalyst_input",
    "crates/catalyst_debug", "crates/catalyst_physics",
    ]

[workspace.dependencies]
# This section ensures all crates use the SAME versions of libraries
winit = "0.30.12"
log = "0.4"
env_logger = "0.11"
nalgebra = "0.34"
rayon = "1.10"
tokio = { version = "1.47.1", features = ["full"] }
async-trait = "0.1.89"
glam = { version = "0.30", features = ["bytemuck"] }
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4"] }
flecs_ecs = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Internal dependencies
catalyst_core = { path = "crates/catalyst_core" }
catalyst_window = { path = "crates/catalyst_window" }
catalyst_assets = { path = "crates/catalyst_assets" }
catalyst_scene = { path = "crates/catalyst_scene" }
catalyst_renderer = { path = "crates/catalyst_renderer" }
catalyst_input = { path = "crates/catalyst_input" }
catalyst_debug = { path = "crates/catalyst_debug" }
catalyst_physics = { path = "crates/catalyst_physics" }

