[package]
name = "catalyst_app"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = { workspace = true }
catalyst_core = { workspace = true }
catalyst_window = { workspace = true }
catalyst_renderer = { workspace = true }
catalyst_assets = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }
rayon = { workspace = true }
glam = { workspace = true }
