[package]
name = "catalyst_app"
version = "0.1.0"
edition = "2024"

[dependencies]
flecs_ecs = { workspace = true }
catalyst_core = { workspace = true }
catalyst_window = { workspace = true }
catalyst_assets = { workspace = true }
catalyst_scene = { workspace = true }
catalyst_renderer = { workspace = true }
catalyst_input = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }
rayon = { workspace = true }
glam = { workspace = true }
winit = { workspace = true }

