[package]
name = "catalyst_assets"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
image = "0.25"
gltf = "1.0"
glam = { workspace = true }
catalyst_core = { workspace = true }