[package]
name = "catalyst_assets"
version = "0.1.0"
edition = "2024"

[dependencies]
flecs_ecs = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
image = "0.25"
gltf = { version = "1.0", features = ["names"]}
glam = { workspace = true }
catalyst_core = { workspace = true }