[package]
name = "catalyst_core"
version = "0.1.0"
edition = "2024"

[dependencies]
tobj = "4.0"

bevy_ecs = { workspace = true }
bevy_reflect = { workspace = true }
rayon = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
glam = { workspace = true }
winit = { workspace = true }
uuid = { workspace = true }
